# banng

./: .gitmodules  CMakeLists.txt  README.md
include/: array.hpp  index.hpp  memory.hpp  random.hpp  time.hpp
src/: CMakeLists.txt  array.cpp  main.cpp  python.cpp  random.cpp  time.cpp
test/: CMakeLists.txt  test_l2_distance.cpp
